tests/analyzer/errors/if.rv
fn main() {
    _ = if {
        var tmp = 62
        break tmp
    } do 1.5 else 4.

    var res = if true {break 1}
    var res2 = if true do -5.5
    var res3 = if true {1} else {"pipou"}
}
